# fastlabio

./: LICENSE  MANIFEST.in  README.md  camera.py  fastlabio.md  main.py  motor.py  pyproject.toml  requirements.txt  setup.py
fastlabio/: __init__.py  camera.py  main.py
fastlabio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_camera.py  test_motor.py
